# fehmToolkit

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: ci_pytest.yaml
analysis/: requirements.txt
analysis/hydrostatic_pressure_20220627/: Hydrostatic pressure.ipynb
fehm_toolkit/: command_line_interface.py  heat_in.py  hydrostatic_pressure.py  rock_properties.py
fehm_toolkit/config/: __init__.py  files_config.py  heat_flux_config.py  heat_in.py  hfi_reader.py  ipi_reader.py  pressure_config.py  rock_properties.py  rock_properties_config.py  rpi_reader.py  run_config.py
fehm_toolkit/fehm_objects/: __init__.py  element.py  grid.py  node.py  state.py  vector.py  zone.py
fehm_toolkit/fehm_runs/: __init__.py  create_config_for_legacy_run.py  create_run_from_mesh.py  create_run_from_run.py
fehm_toolkit/file_interface/: __init__.py  avs.py  compact_node_data.py  fehm.py  files_index.py  grid.py  pressure.py  restart.py  zone.py
fehm_toolkit/file_manipulation/: __init__.py  append_zones.py  modify_fehm_input_file.py
fehm_toolkit/preprocessors/: __init__.py  heat_flux_models.py  heat_in.py  hydrostatic_pressure.py  rock_properties.py
fehm_toolkit/property_models/: __init__.py  compressibility.py  conductivity.py  ctr2tcon.py  generic.py  models.py  permeability.py  porosity.py
fehm_toolkit/utilities/: __init__.py  append_zones.py  create_restart.py  create_run_config_for_legacy_directory.py  (+2 more)
fehmtk/: command_line_interface.py
matlab_archive/: README.md
test/: conftest.py  test_command_line_interface.py
tutorial_files/: box.lgi  config_cond.yaml  p15.ini
(+404 files in other folders)
