[metadata]
name = fehm_toolkit
version = 0.1
description = Utilities and convenience functions for fast and efficient use of FEHM and LaGriT
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/UCSC-Hydrogeology/fehmToolkit
author = Dustin Winslow
author_email = dmwinslow@gmail.com
license = BSD 3-clause
license_file = LICENSE
keywords = FEHM, LaGriT
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Hydrology
project_urls = 
    Source = https://github.com/UCSC-Hydrogeology/fehmToolkit
    Tracker = https://github.com/UCSC-Hydrogeology/fehmToolkit/issues

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
    pandas>1.4,<1.5
    numpy>1.22,<1.23
    matplotlib>3.5,<3.6
python_requires = >=3.9

[options.extras_require]
test =
    pytest >= 6.2.5
all =
    %(test)s

[options.packages.find]
exclude =
    test
    test.*

[pep8]
max-line-length = 120
exclude = .git,__pycache__,venv,.venv

[flake8]
max-line-length = 120
exclude = .git,__pycache__,venv,.venv
per-file-ignores = __init__.py:F401

[tool:pytest]
addopts = --doctest-modules

